--- a/angular5-articles-app/src/app/articles/articles.component.html
+++ b/angular5-articles-app/src/app/articles/articles.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let article of this.articles() | async">
+<div>
+  <p>Search:</p>
+  <input (keyup)="searchArticles(filter.value)" value="" #filter type="text" />
+</div>
+<div *ngFor="let article of this.articles">
   <app-article  [article]="article" (deletedArticle)="delete($event)"></app-article>
 </div>
